--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@supabase/supabase-js": "^2.43.0",
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.0",
+    "sweetalert2": "^11.11.0",
+    "tailwind-merge": "^2.3.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
